WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
132082
Mock scrollbars don't always work in DumpRenderTree
https://bugs.webkit.org/show_bug.cgi?id=132082
Summary
Mock scrollbars don't always work in DumpRenderTree
Tim Horton
Reported
2014-04-23 15:00:55 PDT
The mock scrollbar Setting is set after view creation in DRT. If any scrollbars are created during view creation and do not get replaced later, they will be platform scrollbars instead of mock scrollbars (because setting the setting doesn't force the scrollbars to be recreated). WebKitTestRunner gets around this by setting the preference before creating the view; doing so in DRT as well makes everything happy.
Attachments
patch
(1.54 KB, patch)
2014-04-23 15:03 PDT
,
Tim Horton
ap
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Tim Horton
Comment 1
2014-04-23 15:03:36 PDT
Created
attachment 230013
[details]
patch
Tim Horton
Comment 2
2014-04-23 15:05:00 PDT
At some point we should probably fix the FIXME in Settings::setMockScrollbarsEnabled, but that is harder.
Alexey Proskuryakov
Comment 3
2014-04-23 15:16:41 PDT
Should we remove that from resetWebPreferencesToConsistentValues()? Can tests change the value of this preference at all?
Tim Horton
Comment 4
2014-04-23 15:21:35 PDT
(In reply to
comment #3
)
> Should we remove that from resetWebPreferencesToConsistentValues()? Can tests change the value of this preference at all?
Since it's a WebCore setting and exposed via internals, they CAN, but shouldn't, and the only tests that set it set it to true (why‽).
Tim Horton
Comment 5
2014-04-23 15:23:55 PDT
http://trac.webkit.org/changeset/167728
Alexey Proskuryakov
Comment 6
2014-04-23 15:50:58 PDT
Filed
bug 132085
to kill it.
Radar WebKit Bug Importer
Comment 7
2014-04-23 20:01:22 PDT
<
rdar://problem/16708329
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug