Mock scrollbars don't always work in DumpRenderTree https://bugs.webkit.org/show_bug.cgi?id=132082

Reviewed by Alexey Proskuryakov.

* DumpRenderTree/mac/DumpRenderTree.mm:
(prepareConsistentTestingEnvironment):
Set the mock scrollbar setting before creating the WebView, as this setting
cannot be dynamically changed, so any scrollbars that are created during
WebView initialization and are not replaced before snapshotting will end
up being platform scrollbars instead of mock ones.
WebKitTestRunner already sets this preference before creating WKViews,
so we're just matching its behavior.



Canonical link: https://commits.webkit.org/150143@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@167728 268f45cc-cd09-0410-ab3c-d52691b4dbfc